# Math-Library-Test

./: .gitignore  CMakeLists.txt  LIBRARIES.md  README.md
android/: AndroidManifest.xml  Application.mk  build.xml  resources.arsc
android/libs/armeabi/: gdb.setup
android/src/com/mfoot/mathlibtest/: HelloJNI.java
lib/cml-1_0_2/cml/mathlib/: helper.h
lib/glm-0.9.3.B/: CMakeLists.txt  readme.txt
lib/glm-0.9.3.B/doc/: about.html  code.html  download.html  goodies.html  index.html
lib/glm-0.9.3.B/doc/api-0.9.3/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00019_source.html  a00020.html  a00020_source.html  a00021.html  a00021_source.html  a00022.html  a00022_source.html  a00023.html  a00023_source.html  a00024.html  a00024_source.html  a00025.html  a00025_source.html  a00026_source.html  a00027.html  a00027_source.html  a00028.html  a00028_source.html  a00029.html  a00029_source.html  a00030.html  (+326 more)
lib/glm-0.9.3.B/doc/html/: a00005.html  a00019.html  a00019_source.html  a00020.html  a00020_source.html  a00021_source.html  a00024.html  a00024_source.html  a00025_source.html  a00027_source.html  a00030.html  a00030_source.html  a00032.html  a00032_source.html  a00033_source.html  a00035_source.html  a00037.html  a00037_source.html  a00041.html  a00047_source.html  a00050_source.html  a00052.html  a00052_source.html  a00066_source.html  a00069.html  a00069_source.html  a00074.html  a00074_source.html  a00083_source.html  a00084_source.html  a00091.html  a00091_source.html  a00095_source.html  a00098_source.html  a00104_source.html  a00108_source.html  a00110.html  a00110_source.html  a00111_source.html  a00122.html  (+38 more)
lib/glm-0.9.3.B/doc/src/: data.xml
lib/glm-0.9.3.B/glm/: glm.hpp
lib/glm-0.9.3.B/glm/core/: _detail.hpp  _fixes.hpp  dummy.cpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_geometric.hpp  func_geometric.inl  func_integer.hpp  func_matrix.hpp  func_matrix.inl  func_noise.hpp  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp  func_vector_relational.inl  setup.hpp  type.hpp  type_float.hpp  type_half.hpp  type_half.inl  type_int.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  (+8 more)
lib/glm-0.9.3.B/glm/gtc/: half_float.hpp  half_float.inl  matrix_integer.hpp  noise.hpp  quaternion.hpp  type_precision.hpp  type_ptr.hpp  type_ptr.inl
lib/glm-0.9.3.B/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_cast.hpp  color_cast.inl  color_space.hpp  color_space_YCoCg.hpp  compatibility.hpp  component_wise.hpp  component_wise.inl  constants.hpp  constants.inl  epsilon.hpp  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  matrix_query.hpp  matrix_query.inl  multiple.inl  random.inl  vector_query.hpp  vector_query.inl
lib/glm-0.9.3.B/glm/virtrev/: xstream.hpp
lib/glm-0.9.3.B/test/: glm.cppcheck
lib/glm-0.9.3.B/test/core/: core_func_common.cpp  core_func_exponential.cpp  core_func_geometric.cpp  core_func_integer.cpp  core_func_noise.cpp  core_func_packing.cpp  core_func_swizzle.cpp  core_func_trigonometric.cpp  core_func_vector_relational.cpp  core_setup_message.cpp  core_type_float.cpp  core_type_half.cpp  core_type_length.cpp  core_type_vec1.cpp  core_type_vec2.cpp  core_type_vec3.cpp  core_type_vec4.cpp
lib/glm-0.9.3.B/test/gtc/: CMakeLists.txt  gtc_half_float.cpp  gtc_noise.cpp  gtc_random.cpp  gtc_type_ptr.cpp
lib/glm-0.9.3.B/test/gtx/: CMakeLists.txt  gtx_bit.cpp  gtx_gradient_paint.cpp  gtx_integer.cpp  gtx_matrix_query.cpp  gtx_quaternion.cpp  gtx_random.cpp  gtx_simd_mat4.cpp  gtx_simd_vec4.cpp  gtx_string_cast.cpp  gtx_vector_query.cpp
src/: Driver.cpp  Driver.h  Main.cpp  Main.h  androidactivity.cpp  mother.c  mother.cpp  mother.h
